WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187634
Signal.cpp's activeThreads() should only create its ThreadGroup once.
https://bugs.webkit.org/show_bug.cgi?id=187634
Summary
Signal.cpp's activeThreads() should only create its ThreadGroup once.
Mark Lam
Reported
2018-07-12 22:34:07 PDT
registerThreadForMachExceptionHandling() is relying on the activeThreads() ThreadGroup being a singleton. <
rdar://problem/40662311
>
Attachments
proposed patch.
(1.62 KB, patch)
2018-07-12 22:40 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-07-12 22:40:12 PDT
Created
attachment 344926
[details]
proposed patch.
Yusuke Suzuki
Comment 2
2018-07-12 22:50:31 PDT
Comment on
attachment 344926
[details]
proposed patch. r=me
Mark Lam
Comment 3
2018-07-12 23:37:11 PDT
Comment on
attachment 344926
[details]
proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 4
2018-07-13 00:04:17 PDT
Comment on
attachment 344926
[details]
proposed patch. Clearing flags on attachment: 344926 Committed
r233795
: <
https://trac.webkit.org/changeset/233795
>
WebKit Commit Bot
Comment 5
2018-07-13 00:04:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug