Signal.cpp's activeThreads() should only create its ThreadGroup once. https://bugs.webkit.org/show_bug.cgi?id=187634 <rdar://problem/40662311>

Reviewed by Yusuke Suzuki.

registerThreadForMachExceptionHandling() is relying on the activeThreads()
ThreadGroup being a singleton.

* wtf/threads/Signals.cpp:
(WTF::activeThreads):


Canonical link: https://commits.webkit.org/202846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233795 268f45cc-cd09-0410-ab3c-d52691b4dbfc